--- a/files/tp_parcoursup.ipynb
+++ b/files/tp_parcoursup.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252Ftp_parcoursup.ipynb%26branch%3Dmaster'>Études statistiques sur Parcoursup <img src=https://mybinder.org/badge.svg></a></center>\n",
+    "# Études statistiques sur Parcoursup\n",
     "\n",
     "Dans ce TP, nous allons explorer les données en libre accès issues de Parcoursup sur [https://data.enseignementsup-recherche.gouv.fr/explore/dataset/fr-esr-parcoursup](https://data.enseignementsup-recherche.gouv.fr/explore/dataset/fr-esr-parcoursup).  \n",
-    "Commençons par charger les données en utilisant le module pandas (particulièrement adapté en *data science*) en exécutant les deux cases suivantes :"
+    "Commençons par charger les données en utilisant le module pandas (particulièrement adapté en *data science*) en exécutant la case suivante (ce qui peut prendre quelques minutes) :"
    ]
   },
   {
@@ -15,10 +15,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-08T20:31:14.944727Z",
-     "iopub.status.busy": "2022-03-08T20:31:14.944303Z",
-     "iopub.status.idle": "2022-03-08T20:31:27.442716Z",
-     "shell.execute_reply": "2022-03-08T20:31:27.442245Z"
+     "iopub.execute_input": "2022-03-08T20:57:13.529515Z",
+     "iopub.status.busy": "2022-03-08T20:57:13.528837Z",
+     "iopub.status.idle": "2022-03-08T20:57:26.508441Z",
+     "shell.execute_reply": "2022-03-08T20:57:26.507798Z"
     }
    },
    "outputs": [],
@@ -27,24 +27,16 @@
     "\n",
     "url = \"https://data.enseignementsup-recherche.gouv.fr/explore/dataset/fr-esr-parcoursup/download/?format=csv&timezone=Europe/Berlin&lang=fr&use_labels_for_header=true&csv_separator=%3B\" # Lien du dataset\n",
     "\n",
-    "df = pd.read_csv(url, sep=\";\").iloc[:, [110, 3, 5, 7, 8, 9, 17, 45, 82, 83, 84, 85, 101, 107, 113, 114, 115]]"
+    "df = pd.read_csv(url, sep=\";\").iloc[:, [110, 3, 5, 7, 8, 9, 17, 45, 82, 83, 84, 85, 101, 107, 113, 114, 115]]\n",
+    "df = df.rename(columns={\"% d’admis néo bacheliers sans mention au bac\": \"Sans mention\", \"% d’admis néo bacheliers avec mention Assez Bien au bac\": \"Mention Assez Bien\", \"% d’admis néo bacheliers avec mention Bien au bac\": \"Mention Bien\", \"% d’admis néo bacheliers avec mention Très Bien au bac\": \"Mention Très Bien\", \"Rang du dernier appelé du groupe 1\": \"Rang dernier appelé\", \"Taux d’accès des candidats ayant postulé à la formation (ratio entre le dernier appelé et le nombre vœux PP)\": \"Taux d'accès\", \"LIB_FOR_VOE_INS\": \"Filière\", \"Effectif total des candidats ayant accepté la proposition de l’établissement (admis)\": \"Effectif\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-03-08T20:31:27.446925Z",
-     "iopub.status.busy": "2022-03-08T20:31:27.446111Z",
-     "iopub.status.idle": "2022-03-08T20:31:27.451515Z",
-     "shell.execute_reply": "2022-03-08T20:31:27.451123Z"
-    }
-   },
+   "execution_count": 100,
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "df = df.rename(columns={\"% d’admis néo bacheliers sans mention au bac\": \"Sans mention\", \"% d’admis néo bacheliers avec mention Assez Bien au bac\": \"Mention Assez Bien\", \"% d’admis néo bacheliers avec mention Bien au bac\": \"Mention Bien\", \"% d’admis néo bacheliers avec mention Très Bien au bac\": \"Mention Très Bien\", \"Rang du dernier appelé du groupe 1\": \"Rang dernier appelé\", \"Taux d’accès des candidats ayant postulé à la formation (ratio entre le dernier appelé et le nombre vœux PP)\": \"Taux d'accès\", \"LIB_FOR_VOE_INS\": \"Filière\", \"Effectif total des candidats ayant accepté la proposition de l’établissement (admis)\": \"Effectif\"})"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -55,13 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-08T20:31:27.459080Z",
-     "iopub.status.busy": "2022-03-08T20:31:27.458607Z",
-     "iopub.status.idle": "2022-03-08T20:31:27.478831Z",
-     "shell.execute_reply": "2022-03-08T20:31:27.479190Z"
+     "iopub.execute_input": "2022-03-08T20:57:26.520799Z",
+     "iopub.status.busy": "2022-03-08T20:57:26.519655Z",
+     "iopub.status.idle": "2022-03-08T20:57:26.552827Z",
+     "shell.execute_reply": "2022-03-08T20:57:26.552247Z"
     }
    },
    "outputs": [
@@ -465,7 +457,7 @@
        "[13396 rows x 17 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,13 +476,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-08T20:31:27.483010Z",
-     "iopub.status.busy": "2022-03-08T20:31:27.482562Z",
-     "iopub.status.idle": "2022-03-08T20:31:27.484512Z",
-     "shell.execute_reply": "2022-03-08T20:31:27.484827Z"
+     "iopub.execute_input": "2022-03-08T20:57:26.558380Z",
+     "iopub.status.busy": "2022-03-08T20:57:26.557554Z",
+     "iopub.status.idle": "2022-03-08T20:57:26.560454Z",
+     "shell.execute_reply": "2022-03-08T20:57:26.560950Z"
     }
    },
    "outputs": [
@@ -500,7 +492,7 @@
        "'Filière'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,13 +523,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-08T20:31:27.489716Z",
-     "iopub.status.busy": "2022-03-08T20:31:27.489299Z",
-     "iopub.status.idle": "2022-03-08T20:31:27.490996Z",
-     "shell.execute_reply": "2022-03-08T20:31:27.491337Z"
+     "iopub.execute_input": "2022-03-08T20:57:26.568658Z",
+     "iopub.status.busy": "2022-03-08T20:57:26.568045Z",
+     "iopub.status.idle": "2022-03-08T20:57:26.573945Z",
+     "shell.execute_reply": "2022-03-08T20:57:26.574470Z"
     }
    },
    "outputs": [
@@ -558,7 +550,7 @@
        "Name: Sélectivité, Length: 13396, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,13 +561,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-08T20:31:27.494883Z",
-     "iopub.status.busy": "2022-03-08T20:31:27.494424Z",
-     "iopub.status.idle": "2022-03-08T20:31:27.496056Z",
-     "shell.execute_reply": "2022-03-08T20:31:27.496381Z"
+     "iopub.execute_input": "2022-03-08T20:57:26.580541Z",
+     "iopub.status.busy": "2022-03-08T20:57:26.579479Z",
+     "iopub.status.idle": "2022-03-08T20:57:26.583074Z",
+     "shell.execute_reply": "2022-03-08T20:57:26.582513Z"
     }
    },
    "outputs": [
@@ -585,7 +577,7 @@
        "'formation non sélective'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,13 +613,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-08T20:31:27.503683Z",
-     "iopub.status.busy": "2022-03-08T20:31:27.498829Z",
-     "iopub.status.idle": "2022-03-08T20:31:27.526997Z",
-     "shell.execute_reply": "2022-03-08T20:31:27.527340Z"
+     "iopub.execute_input": "2022-03-08T20:57:26.587700Z",
+     "iopub.status.busy": "2022-03-08T20:57:26.587094Z",
+     "iopub.status.idle": "2022-03-08T20:57:26.627153Z",
+     "shell.execute_reply": "2022-03-08T20:57:26.627664Z"
     }
    },
    "outputs": [
@@ -1450,7 +1442,7 @@
        "12290                                                0.0                                        "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1493,13 +1485,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-08T20:31:27.531191Z",
-     "iopub.status.busy": "2022-03-08T20:31:27.530751Z",
-     "iopub.status.idle": "2022-03-08T20:31:27.532766Z",
-     "shell.execute_reply": "2022-03-08T20:31:27.533094Z"
+     "iopub.execute_input": "2022-03-08T20:57:26.634595Z",
+     "iopub.status.busy": "2022-03-08T20:57:26.633354Z",
+     "iopub.status.idle": "2022-03-08T20:57:26.636744Z",
+     "shell.execute_reply": "2022-03-08T20:57:26.636225Z"
     }
    },
    "outputs": [
@@ -1509,7 +1501,7 @@
        "46"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1552,13 +1544,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-08T20:31:27.536741Z",
-     "iopub.status.busy": "2022-03-08T20:31:27.536322Z",
-     "iopub.status.idle": "2022-03-08T20:31:27.538224Z",
-     "shell.execute_reply": "2022-03-08T20:31:27.538546Z"
+     "iopub.execute_input": "2022-03-08T20:57:26.641600Z",
+     "iopub.status.busy": "2022-03-08T20:57:26.641000Z",
+     "iopub.status.idle": "2022-03-08T20:57:26.644354Z",
+     "shell.execute_reply": "2022-03-08T20:57:26.643889Z"
     }
    },
    "outputs": [
@@ -1568,7 +1560,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1579,13 +1571,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-08T20:31:27.542272Z",
-     "iopub.status.busy": "2022-03-08T20:31:27.541852Z",
-     "iopub.status.idle": "2022-03-08T20:31:27.543817Z",
-     "shell.execute_reply": "2022-03-08T20:31:27.544130Z"
+     "iopub.execute_input": "2022-03-08T20:57:26.650323Z",
+     "iopub.status.busy": "2022-03-08T20:57:26.649233Z",
+     "iopub.status.idle": "2022-03-08T20:57:26.652175Z",
+     "shell.execute_reply": "2022-03-08T20:57:26.652701Z"
     }
    },
    "outputs": [
@@ -1595,7 +1587,7 @@
        "False"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1640,7 +1632,8 @@
    "source": [
     "# À vous de jouer !\n",
     "\n",
-    "Chercher d'autres statistiques sur les données : pourcentage de bacheliers technologiques dans le supérieur, filière de CPGE la plus sélective..."
+    "Chercher d'autres statistiques sur les données : pourcentage de bacheliers technologiques dans le supérieur, filière de CPGE la plus sélective...  \n",
+    "Vous pouvez aussi explorer d'autres données sur https://data.enseignementsup-recherche.gouv.fr."
    ]
   }
  ],
