--- a/files/5_graph/tp/tp1/tp_graph1.ipynb
+++ b/files/5_graph/tp/tp1/tp_graph1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F5_graph%252Ftp%252Ftp1%252Ftp_graph1.ipynb%26branch%3Dmaster'>TP 1 : Graphe du Facebook <img src=https://mybinder.org/badge.svg></a></center>\n",
+    "# TP Graphe 1 : Graphe de Facebook\n",
     "\n",
     "Dans ce TP, nous étudions des [graphes collectés par une équipe de recherche à Stanford](http://snap.stanford.edu/data/index.html) dans différents domaines : réseaux sociaux, réseaux routiers, graphe des avis de consommateurs...  \n",
     "Nous utiliserons les modules suivants :"
