--- a/files/5_graph/tp/tp2/tp_graph2.ipynb
+++ b/files/5_graph/tp/tp2/tp_graph2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F5_graph%252Ftp%252Ftp2%252Ftp_graph2.ipynb%26branch%3Dmaster'>TP 2 : définition et représentation de graphes <img src=https://mybinder.org/badge.svg></a></center>\n",
+    "# TP Graphe 2 : Représentation par matrice d'adjacence\n",
     "\n",
     "Si nécessaire, revoir le cours sur les graphes et notamment les notions de sommet, arête, voisin, degré, matrice d'adjacence..."
    ]
