--- a/files/5_graph/tp/tp2/tp_graph2.ipynb
+++ b/files/5_graph/tp/tp2/tp_graph2.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://notebook.basthon.fr/?from=https://raw.githubusercontent.com/fortierq/itc1/master/files/5_graph/tp/tp2/tp_graph2.ipynb'>TP Graphe 2 : Représentation par matrice d'adjacence <img src=https://framagit.org/uploads/-/system/project/avatar/55763/basthon_shadow.png width=100></a></center>\n",
+    "# TP Graphe 2 : Représentation par matrice d'adjacence\n",
+    "\n",
     "\n",
     "Si nécessaire, revoir le cours sur les graphes et notamment les notions de sommet, arête, voisin, degré, matrice d'adjacence..."
    ]
@@ -79,7 +80,7 @@
    "source": [
     "**Exercice** : Écrire une fonction `produit` telle que, si `A` et `B` sont deux matrices compatibles, `produit(A, B)` renvoie une matrice contenant le produit `AB` de `A` et `B`.  \n",
     "On rappelle que, si $A = (a_{i, k})$ est de taille $n\\times p$ et $B = (b_{k, j})$ de taille $p\\times q$ alors $AB$ est de taille $n\\times q$ et :\n",
-    "$$AB = (c_{i, k}), \\text{~ où } c_{i, k} = \\sum_{j = 0}^{p - 1} a_{i, j} b_{j, k}$$\n",
+    "$$AB = (c_{i, k}), ~\\text{ où } c_{i, k} = \\sum_{j = 0}^{p - 1} a_{i, j} b_{j, k}$$\n",
     "Tester avec deux matrices $2\\times 3$ et $3\\times 2$ de votre choix et vérifier en faisant aussi le produit à la main."
    ]
   },
