--- a/files/5_graph/tp/tp2/tp_graph2.ipynb
+++ b/files/5_graph/tp/tp2/tp_graph2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://notebook.basthon.fr/?from=https://raw.githubusercontent.com/fortierq/itc1/master/files/5_graph/tp/tp2/tp_graph2.ipynb'>TP Graphe 2 : Représentation par matrice d'adjacence <img src=https://framagit.org/uploads/-/system/project/avatar/55763/basthon_shadow.png width=100></a></center>\n",
+    "# TP Graphe 2 : Représentation par matrice d'adjacence\n",
     "\n",
     "\n",
     "Si nécessaire, revoir le cours sur les graphes et notamment les notions de sommet, arête, voisin, degré, matrice d'adjacence..."
@@ -37,7 +37,7 @@
    },
    "source": [
     "**Exercice** : Définir dans une variable `G` la matrice d'adjacence du graphe suivant :\n",
-    "<center><img src=https://github.com/fortierq/itc1/raw/4be1ee8d9679ffae521c506ad54acb9e6099c614/files/5_graph/tp/tp2/g.png width=300></center>"
+    "<center><img src=https://github.com/fortierq/itc1/raw/4be1ee8d9679ffae521c506ad54acb9e6099c614/files/5_graph/tp/tp2/g.png width=200></center>"
    ]
   },
   {
@@ -126,7 +126,7 @@
    },
    "source": [
     "**Exercice** : En utilisant la question précédente et la fonction `puissance`, trouver le nombre de chemins du sommet $0$ au sommet $2$ dans le graphe suivant :\n",
-    "<center><img src=https://github.com/fortierq/itc1/raw/master/files/5_graph/tp/tp2/gdir.png width=300></center>"
+    "<center><img src=https://github.com/fortierq/itc1/raw/master/files/5_graph/tp/tp2/gdir.png width=230></center>"
    ]
   },
   {
