--- a/files/5_graph/tp/tp2/tp_graph2.ipynb
+++ b/files/5_graph/tp/tp2/tp_graph2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://notebook.basthon.fr/?from=https://raw.githubusercontent.com/fortierq/itc1/master/files/5_graph/tp/tp2/tp_graph2.ipynb'>TP Graphe 2 : Représentation par matrice d'adjacence <img src=https://framagit.org/uploads/-/system/project/avatar/55763/basthon_shadow.png width=100></a></center>\n",
+    "# TP Graphe 2 : Représentation par matrice d'adjacence\n",
     "\n",
     "\n",
     "Si nécessaire, [revoir le cours sur les graphes](https://fortierq.github.io/itc1/files/5_graph/1_definition/1_graph) et notamment les notions de sommet, arête, voisin, degré, matrice d'adjacence..."
@@ -36,8 +36,19 @@
     ]
    },
    "source": [
-    "**Exercice** : Définir dans une variable `G` la matrice d'adjacence du graphe suivant :\n",
+    "**Exercice** : Définir dans une variable `G` la matrice d'adjacence du graphe suivant (on pourra éventuellement utiliser la fonction précédente) :\n",
     "<center><img src=https://github.com/fortierq/itc1/raw/4be1ee8d9679ffae521c506ad54acb9e6099c614/files/5_graph/tp/tp2/g.png width=200></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
+   "source": [
+    "**Exercice** : Écrire une fonction `n_aretes` pour calculer le nombre d'arêtes d'un graphe donné par matrice d'adjacence. Tester avec le graphe `G` précédent. On rappelle qu'il faut 2 indices $i$ et $j$ (et donc deux boucles `for`) pour parcourir les éléments d'une matrice."
    ]
   },
   {
@@ -54,13 +65,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "exo"
-    ]
-   },
+   "metadata": {},
    "source": [
-    "**Exercice** : Écrire une fonction `n_aretes` pour calculer le nombre d'arêtes d'un graphe. Tester avec le graphe précédent."
+    "**Exercice** : En déduire une fonction `deg` telle que `deg(G, v)` renvoie le degré du sommet `v`."
    ]
   },
   {
@@ -185,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
