--- a/files/5_graph/tp/tp2/tp_graph2.ipynb
+++ b/files/5_graph/tp/tp2/tp_graph2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://notebook.basthon.fr/?from=https://raw.githubusercontent.com/fortierq/itc1/master/files/5_graph/tp/tp2/tp_graph2.ipynb'>TP Graphe 2 : Représentation par matrice d'adjacence <img src=https://framagit.org/uploads/-/system/project/avatar/55763/basthon_shadow.png width=100></a></center>\n",
+    "# TP Graphe 2 : Représentation par matrice d'adjacence\n",
     "\n",
     "\n",
     "Si nécessaire, [revoir le cours sur les graphes](https://fortierq.github.io/itc1/files/5_graph/1_definition/1_graph) et notamment les notions de sommet, arête, voisin, degré, matrice d'adjacence..."
@@ -14,7 +14,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Représentation par matrice d'adjacence"
+    "## Représentation par matrice d'adjacence\n",
+    "\n",
+    "Dans cette partie, on utilise uniquement des graphes non orientés."
    ]
   },
   {
@@ -25,7 +27,14 @@
     ]
    },
    "source": [
-    "**Exercice** : Définir une fonction `make_matrix` telle que `make_matrix(n)` renvoie une matrice $n\\times n$ avec que des $0$. On rappelle qu'une matrice est définie par une liste de listes, où chaque sous-liste représente une ligne de la matrice."
+    "**Exercice** : Définir une fonction `make_matrix` telle que `make_matrix(n, p)` renvoie une matrice $n\\times p$ avec que des $0$. On rappelle qu'une matrice est définie par une liste de listes, où chaque sous-liste représente une ligne de la matrice."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercice** : Ecrire une fonction `add_edge` telle que `add_edge(G, u, v)` ajoute l'arête entre les sommets `u` et `v`."
    ]
   },
   {
@@ -36,19 +45,8 @@
     ]
    },
    "source": [
-    "**Exercice** : Définir dans une variable `G` la matrice d'adjacence du graphe suivant (on pourra éventuellement utiliser la fonction précédente) :\n",
+    "**Exercice** : Définir dans une variable `G` la matrice d'adjacence du graphe suivant (on pourra éventuellement utiliser les fonctions précédentes) :\n",
     "<center><img src=https://github.com/fortierq/itc1/raw/4be1ee8d9679ffae521c506ad54acb9e6099c614/files/5_graph/tp/tp2/g.png width=200></center>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "exo"
-    ]
-   },
-   "source": [
-    "**Exercice** : Écrire une fonction `n_aretes` pour calculer le nombre d'arêtes d'un graphe donné par matrice d'adjacence. Tester avec le graphe `G` précédent. On rappelle qu'il faut 2 indices $i$ et $j$ (et donc deux boucles `for`) pour parcourir les éléments d'une matrice."
    ]
   },
   {
@@ -72,6 +70,17 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
+   "source": [
+    "**Exercice** : Écrire une fonction `n_aretes` pour calculer le nombre d'arêtes d'un graphe donné par matrice d'adjacence. Tester avec le graphe `G` précédent. On pourra soit réutiliser `deg`, soit deux boucles `for` pour parcourir les éléments de la matrice."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Puissance de la matrice d'adjacence"
@@ -88,6 +97,7 @@
     "**Exercice** : Écrire une fonction `produit` telle que, si `A` et `B` sont deux matrices compatibles, `produit(A, B)` renvoie une matrice contenant le produit `AB` de `A` et `B`.  \n",
     "On rappelle que, si $A = (a_{i, k})$ est de taille $n\\times p$ et $B = (b_{k, j})$ de taille $p\\times q$ alors $AB$ est de taille $n\\times q$ et :\n",
     "$$AB = (c_{i, k}), ~\\text{ où } c_{i, k} = \\sum_{j = 0}^{p - 1} a_{i, j} b_{j, k}$$\n",
+    "On pourra utiliser `make_matrix` pour créer la matrice du résultat et remplir ses éléments un par un.  \n",
     "Tester avec deux matrices $2\\times 3$ et $3\\times 2$ de votre choix et vérifier en faisant aussi le produit à la main."
    ]
   },
@@ -118,7 +128,7 @@
     ]
    },
    "source": [
-    "**Exercice** : Soit $A = (a_{i, j})$ la matrice d'adjacence d'un graphe $G$. Soit $A^k = A\\times ... \\times A$. On note $a^k_{i, j}$ le coefficient ligne $i$, colonne $j$ de $A^k$.  \n",
+    "**Exercice** : Soit $A = (a_{i, j})$ la matrice d'adjacence d'un graphe $G$ (orienté ou non). Soit $A^k = A\\times ... \\times A$. On note $a^k_{i, j}$ le coefficient ligne $i$, colonne $j$ de $A^k$.  \n",
     "Montrer par récurrence sur $k$ que $a^k_{i, j}$ est égal au nombre de chemins de longueur $k$ du graphe $G$.  \n",
     "On pourra commencer par donner une équation de récurrence sur $a^k_{i, j}$.  \n",
     "Merci de m'appeler pour que je vérifie votre raisonnement."
