--- a/files/5_graph/tp/tp3/tp_pagerank.ipynb
+++ b/files/5_graph/tp/tp3/tp_pagerank.ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://notebook.basthon.fr/?from=https://raw.githubusercontent.com/fortierq/itc1/master/files/5_graph/tp/tp3/tp_pagerank.ipynb'><center><a href='https://notebook.basthon.fr/?from=https://raw.githubusercontent.com/fortierq/itc1/master/files/5_graph/tp/tp3/tp_pagerank.ipynb'>TP Graphe 3 : algorithme PageRank de Google <img src=https://framagit.org/uploads/-/system/project/avatar/55763/basthon_shadow.png width=100></a></center> <img src=https://framagit.org/uploads/-/system/project/avatar/55763/basthon_shadow.png width=100></a></center>\n",
+    "# TP Graphe 3 : algorithme PageRank de Google\n",
     "\n",
-    "> Pour savoir dans quel ordre afficher les résultats d'une recherche, Google utilise l'algorithme PageRank, qui consiste à faire une marche aléatoire sur le graphe du Web, dont les sommets sont les pages Internet et les arêtes sont les liens URL d'une page à une autre.\n",
+    "> Pour savoir dans quel ordre afficher les résultats d'une recherche, Google utilise l'algorithme PageRank. Celui-ci consiste à faire une marche aléatoire sur le graphe du Web, dont les sommets sont les pages Internet et les arêtes sont les liens URL d'une page à une autre.\n",
+    "\n",
+    "<center><img src=https://github.com/fortierq/itc1/raw/master/files/5_graph/tp/tp3/pagerank.png width=500></center>\n",
     "\n",
     "## Graphes aléatoires\n",
     "\n",
@@ -15,16 +17,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.24526437205706086"
+       "0.3924207554261895"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +81,7 @@
     "    for i in range(len(G)):\n",
     "        for j in G[i]:\n",
     "            G_.add_edge(i, j)\n",
-    "    nx.draw_networkx(G_,font_color =\"w\", node_color=\"black\")\n",
+    "    nx.draw_networkx(G_, font_color =\"w\", node_color=\"black\")\n",
     "    plt.show()"
    ]
   },
@@ -170,12 +172,12 @@
     ]
    },
    "source": [
-    "**Exercice** : Vérifier sur des graphes aléatoires que la liste renvoyée par `rank` a l'air correcte, en affichant le graphe avec la fonction suivante, où plus un sommet est foncé, plus son un rang est bon (un sommet avec beaucoup d'arêtes entrantes doit donc apparaître en foncé) :"
+    "**Exercice** : Vérifier sur des graphes aléatoires que la liste renvoyée par `rank` a l'air correcte, en affichant le graphe avec la fonction suivante, où la taille d'un sommet est proportionnel à son rang."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 73,
    "metadata": {
     "tags": []
    },
@@ -186,7 +188,10 @@
     "    for i in range(len(G)):\n",
     "        for j in G[i]:\n",
     "            G_.add_edge(i, j)\n",
-    "    nx.draw_networkx(G_,font_color =\"w\", node_color=rank, cmap=\"Greys\")\n",
+    "    max_size = 1500\n",
+    "    a = (1500 - 100)/(1 - len(rank))\n",
+    "    node_size = [rank[i]*a + 1500 - a for i in range(len(rank))]\n",
+    "    nx.draw_networkx(G_, font_color =\"w\", node_color=\"black\", node_size=node_size)\n",
     "    plt.show()"
    ]
   }
