--- a/files/1_Python/cours/1_fonctions.ipynb
+++ b/files/1_Python/cours/1_fonctions.ipynb
@@ -5,7 +5,7 @@
    "id": "31e1aa44",
    "metadata": {},
    "source": [
-    "# <center><a href='https://notebook.basthon.fr/?from=https://raw.githubusercontent.com/fortierq/itc1/master/files/1_Python/cours/1_fonctions.ipynb'><center><a href='https://notebook.basthon.fr/?from=https://raw.githubusercontent.com/fortierq/itc1/master/files/1_Python/cours/1_fonctions.ipynb'><center><a href='https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F1_Python%252Fcours%252F1_fonctions.ipynb%26branch%3Dmaster'>Définition de fonction <img src=https://mybinder.org/badge_logo.svg></a></center> <img src=https://framagit.org/uploads/-/system/project/avatar/55763/basthon_shadow.png width=100></a></center> <img src=https://framagit.org/uploads/-/system/project/avatar/55763/basthon_shadow.png width=100></a></center>\n",
+    "# <center><a href='https://notebook.basthon.fr/?from=https://raw.githubusercontent.com/fortierq/itc1/master/files/1_Python/cours/1_fonctions.ipynb'><center><a href='https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F1_Python%252Fcours%252F1_fonctions.ipynb%26branch%3Dmaster'>Définition de fonction <img src=https://mybinder.org/badge_logo.svg></a></center> <img src=https://framagit.org/uploads/-/system/project/avatar/55763/basthon_shadow.png width=100></a></center>\n",
     "\n",
     "Voici un exemple de définition de fonction avec Python :"
    ]
