Revert "Add Binder link"
This reverts commit 35d6f99d618961dbe3360eae527e18931fd76854.

--- a/files/1_Python/3_boucles_cor.ipynb
+++ b/files/1_Python/3_boucles_cor.ipynb
@@ -5,7 +5,7 @@
    "id": "9ee4445d-5a4b-4bbe-8bb4-d31dbba09556",
    "metadata": {},
    "source": [
-    "# <center><a href='https://notebook.basthon.fr/?from=https://raw.githubusercontent.com/fortierq/itc1/master/files/1_Python/3_boucles_cor.ipynb'><center><a href='https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F1_Python%252F3_boucles_cor.ipynb%26branch%3Dmaster'>Boucle for <img src=https://mybinder.org/badge.svg></a></center> <img src=https://framagit.org/uploads/-/system/project/avatar/55763/basthon_shadow.png width=100></a></center>"
+    "# <center><a href='https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F1_Python%252F3_boucles_cor.ipynb%26branch%3Dmaster'>Boucle for <img src=https://mybinder.org/badge.svg></a></center>"
    ]
   },
   {
