--- a/files/1_Python/cours/2_conditions.ipynb
+++ b/files/1_Python/cours/2_conditions.ipynb
@@ -5,7 +5,7 @@
    "id": "e4d8523a",
    "metadata": {},
    "source": [
-    "# <center><a href='https://notebook.basthon.fr/?from=https://raw.githubusercontent.com/fortierq/itc1/master/files/1_Python/cours/2_conditions.ipynb'><center><a href='https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F1_Python%252Fcours%252F2_conditions.ipynb%26branch%3Dmaster'>Condition if <img src=https://mybinder.org/badge_logo.svg></a></center> <img src=https://framagit.org/uploads/-/system/project/avatar/55763/basthon_shadow.png width=100></a></center>\n",
+    "# <center><a href='https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F1_Python%252Fcours%252F2_conditions.ipynb%26branch%3Dmaster'>Condition if <img src=https://mybinder.org/badge_logo.svg></a></center>\n",
     "\n",
     "On peut écrire une condition `if` de la façon suivante en Python :\n",
     "```python\n",
