--- a/files/5_graph/tp/tp3/tp_pagerank.ipynb
+++ b/files/5_graph/tp/tp3/tp_pagerank.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://notebook.basthon.fr/?from=https://raw.githubusercontent.com/fortierq/itc1/master/files/5_graph/tp/tp3/tp_pagerank.ipynb'>TP Graphe 3 : algorithme PageRank de Google <img src=https://framagit.org/uploads/-/system/project/avatar/55763/basthon_shadow.png width=100></a></center>\n",
+    "# TP Graphe 3 : algorithme PageRank de Google\n",
     "\n",
     "> Pour savoir dans quel ordre afficher les résultats d'une recherche, Google utilise l'algorithme PageRank. Celui-ci consiste à faire une marche aléatoire sur le graphe du Web, dont les sommets sont les pages Internet et les arêtes sont les liens URL d'une page à une autre.\n",
     "\n",
@@ -17,16 +17,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3924207554261895"
+       "0.6772066805289227"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
     "    for i in range(len(G)):\n",
     "        for j in G[i]:\n",
     "            G_.add_edge(i, j)\n",
-    "    nx.draw_networkx(G_, font_color =\"w\", node_color=\"black\")\n",
+    "    nx.draw_networkx(G_, font_color =\"w\", node_color=\"black\", node_size=600, arrowsize=35, font_size=16)\n",
     "    plt.show()"
    ]
   },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -191,7 +191,7 @@
     "    max_size = 1500\n",
     "    a = (1500 - 100)/(1 - len(rank))\n",
     "    node_size = [rank[i]*a + 1500 - a for i in range(len(rank))]\n",
-    "    nx.draw_networkx(G_, font_color =\"w\", node_color=\"black\", node_size=node_size)\n",
+    "    nx.draw_networkx(G_, font_color =\"w\", node_color=\"black\", node_size=node_size, arrowsize=35, font_size=16)\n",
     "    plt.show()"
    ]
   }
