--- a/files/5_graph/tp/tp3/tp_pagerank.ipynb
+++ b/files/5_graph/tp/tp3/tp_pagerank.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://notebook.basthon.fr/?from=https://raw.githubusercontent.com/fortierq/itc1/master/files/5_graph/tp/tp3/tp_pagerank.ipynb'>TP Graphe 3 : algorithme PageRank de Google <img src=https://framagit.org/uploads/-/system/project/avatar/55763/basthon_shadow.png width=100></a></center>\n",
+    "# TP Graphe 3 : algorithme PageRank de Google\n",
     "\n",
     "> Pour savoir dans quel ordre afficher les résultats d'une recherche, Google utilise l'algorithme PageRank. Celui-ci consiste à faire une marche aléatoire sur le graphe du Web, dont les sommets sont les pages Internet et les arêtes sont les liens URL d'une page à une autre.\n",
     "\n",
@@ -172,12 +172,12 @@
     ]
    },
    "source": [
-    "**Exercice** : Vérifier sur des graphes aléatoires que la liste renvoyée par `rank` a l'air correcte, en affichant le graphe avec la fonction suivante, où la taille d'un sommet est proportionnel à son rang."
+    "**Exercice** : Vérifier sur des graphes aléatoires que la liste renvoyée par `rank` a l'air correcte, en affichant le graphe avec la fonction suivante, où la taille d'un sommet est proportionnelle à son rang."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 74,
    "metadata": {
     "tags": []
    },
@@ -185,13 +185,17 @@
    "source": [
     "def draw_count(G, rank):\n",
     "    G_ = nx.DiGraph()\n",
+    "    G_.add_nodes_from(range(len(G)))\n",
     "    for i in range(len(G)):\n",
     "        for j in G[i]:\n",
     "            G_.add_edge(i, j)\n",
-    "    max_size = 1500\n",
-    "    a = (1500 - 100)/(1 - len(rank))\n",
-    "    node_size = [rank[i]*a + 1500 - a for i in range(len(rank))]\n",
-    "    nx.draw_networkx(G_, font_color =\"w\", node_color=\"black\", node_size=node_size, arrowsize=35, font_size=16)\n",
+    "    r = [0]*len(rank)\n",
+    "    for i, e in enumerate(rank):\n",
+    "        r[e] = i + 1\n",
+    "    max_size = 5000\n",
+    "    a = (max_size - 500)/(1 - len(rank))\n",
+    "    node_sizes= [int(r[i]*a + max_size - a) for i in range(len(r))]\n",
+    "    nx.draw_networkx(G_, font_color =\"w\", node_color=\"black\", node_size=node_sizes, arrowsize=35, font_size=16)\n",
     "    plt.show()"
    ]
   }
