--- a/files/5_graph/tp/tp3/tp_pagerank.ipynb
+++ b/files/5_graph/tp/tp3/tp_pagerank.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://notebook.basthon.fr/?from=https://raw.githubusercontent.com/fortierq/itc1/master/files/5_graph/tp/tp3/tp_pagerank.ipynb'>TP Graphe 3 : algorithme PageRank de Google <img src=https://framagit.org/uploads/-/system/project/avatar/55763/basthon_shadow.png width=100></a></center>\n",
+    "# TP Graphe 3 : algorithme PageRank de Google\n",
     "\n",
     "> Pour savoir dans quel ordre afficher les résultats d'une recherche, Google utilise l'algorithme PageRank. Celui-ci consiste à faire une marche aléatoire sur le graphe du Web, dont les sommets sont les pages Internet et les arêtes sont les liens URL d'une page à une autre.\n",
     "\n",
-    "<center><img src=https://github.com/fortierq/itc1/raw/master/files/5_graph/tp/tp3/pagerank.png width=500></center>\n",
+    "<center><img src=https://github.com/fortierq/itc1/blob/master/files/5_graph/tp/tp3/pagerank.png?raw=true width=500></center>\n",
     "\n",
     "## Graphes aléatoires\n",
     "\n",
