--- a/files/5_graph/tp/tp3/tp_pagerank.ipynb
+++ b/files/5_graph/tp/tp3/tp_pagerank.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://notebook.basthon.fr/?from=https://raw.githubusercontent.com/fortierq/itc1/master/files/5_graph/tp/tp3/tp_pagerank.ipynb'>TP Graphe 3 : algorithme PageRank de Google <img src=https://framagit.org/uploads/-/system/project/avatar/55763/basthon_shadow.png width=100></a></center>\n",
+    "# TP Graphe 3 : algorithme PageRank de Google\n",
     "\n",
     "> Pour savoir dans quel ordre afficher les résultats d'une recherche, Google utilise l'algorithme PageRank. Celui-ci consiste à faire une marche aléatoire sur le graphe du Web, dont les sommets sont les pages Internet et les arêtes sont les liens URL d'une page à une autre.\n",
     "\n",
@@ -23,7 +23,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6772066805289227"
+       "0.10483878084511566"
       ]
      },
      "execution_count": 1,
@@ -45,7 +45,8 @@
     ]
    },
    "source": [
-    "**Exercice** : Écrire une fonction `bernouilli` telle que `bernouilli(p)` renvoie $1$ avec probabilité `p`, $0$ sinon."
+    "**Exercice** : Écrire une fonction `bernouilli` telle que, si `p` est un `float` entre $0$ et $1$, `bernouilli(p)` renvoie $1$ avec probabilité `p`, $0$ sinon.  \n",
+    "Indice : On pourra commencer avec `p` = $\\frac{1}{2}$ (même probabilité d'obtenir un $1$ et un $0$)."
    ]
   },
   {
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,6 +78,7 @@
     "\n",
     "plt.rcParams[\"figure.figsize\"] = (15,8)\n",
     "def draw_graph(G):\n",
+    "    plt.clf()\n",
     "    G_ = nx.DiGraph()\n",
     "    for i in range(len(G)):\n",
     "        for j in G[i]:\n",
@@ -219,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
