--- a/files/5_graph/tp/tp3/tp_pagerank.ipynb
+++ b/files/5_graph/tp/tp3/tp_pagerank.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://notebook.basthon.fr/?from=https://raw.githubusercontent.com/fortierq/itc1/master/files/5_graph/tp/tp3/tp_pagerank.ipynb'>TP Graphe 3 : algorithme PageRank de Google <img src=https://framagit.org/uploads/-/system/project/avatar/55763/basthon_shadow.png width=100></a></center>\n",
+    "# TP Graphe 3 : algorithme PageRank de Google\n",
     "\n",
     "> Pour savoir dans quel ordre afficher les résultats d'une recherche, Google utilise l'algorithme PageRank. Celui-ci consiste à faire une marche aléatoire sur le graphe du Web, dont les sommets sont les pages Internet et les arêtes sont les liens URL d'une page à une autre.\n",
     "\n",
@@ -127,8 +127,8 @@
     ]
    },
    "source": [
-    "**Exercice** : Écrire une fonction `step(G, u)` renvoyant un voisin de `u` choisi aléatoirement dans le graphe `G` représenté par liste d'adjacence.  \n",
-    "**Remarque** : Pour tester cette fonction, il faut que `u` possède au moins un voisin... Essayer donc avec un `random_graph(n, p)` avec `p` au moins égal à $0.3$, ou essayez plusieurs fois."
+    "**Exercice** : Écrire une fonction `step(G, u)` renvoyant un voisin de `u` choisi aléatoirement dans le graphe `G` représenté par liste d'adjacence. On pourra utiliser `random.randrange(n)` qui renvoie un entier aléatoirement entre $0$ et $n - 1$.  \n",
+    "**Remarque** : Pour tester `step`, il faut que `u` possède au moins un voisin... Essayer donc avec un `random_graph(n, p)` avec `p` au moins égal à $0.3$, ou essayez plusieurs fois."
    ]
   },
   {
