--- a/files/5_graph/tp/tp4/tp_labyrinth.ipynb
+++ b/files/5_graph/tp/tp4/tp_labyrinth.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://notebook.basthon.fr/?from=https://raw.githubusercontent.com/fortierq/itc1/master/files/5_graph/tp/tp4/tp_labyrinth.ipynb'>TP Graphe 4 : Labyrinthe et parcours en profondeur <img src=https://framagit.org/uploads/-/system/project/avatar/55763/basthon_shadow.png width=100></a></center>\n",
+    "# Exemple de parcours en profondeur : Labyrinthe\n",
     "\n",
     "## Génération du labyrinthe"
    ]
