--- a/files/5_graph/tp/tp2/tp_matrice_adjacence.ipynb
+++ b/files/5_graph/tp/tp2/tp_matrice_adjacence.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://notebook.basthon.fr/?from=https://raw.githubusercontent.com/fortierq/itc1/master/files/5_graph/tp/tp2/tp_matrice_adjacence.ipynb'>TP Graphe 2 : Représentation par matrice d'adjacence <img src=https://framagit.org/uploads/-/system/project/avatar/55763/basthon_shadow.png width=100></a></center>\n",
+    "# TP Graphe 2 : Représentation par matrice d'adjacence\n",
     "\n",
     "Si nécessaire, [revoir le cours sur les graphes](https://fortierq.github.io/itc1/files/5_graph/1_definition/1_graph) et notamment les notions de sommet, arête, voisin, degré, matrice d'adjacence..."
    ]
@@ -30,10 +30,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# version \"basique\" :\n",
+    "def make_matrix(n, p):\n",
+    "    M = []\n",
+    "    for i in range(n):\n",
+    "        L = [] # ième ligne\n",
+    "        for i in range(p):\n",
+    "            L.append(0)\n",
+    "        M.append(L)\n",
+    "    return M\n",
+    "\n",
+    "# version rapide :\n",
+    "def make_matrix(n, p):\n",
+    "    return [[0]*p for i in range(n)]\n",
+    "\n",
+    "make_matrix(3, 4)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercice** : Ecrire une fonction `add_edge` telle que `add_edge(G, u, v)` ajoute l'arête entre les sommets `u` et `v`."
+    "**Exercice** : Ecrire une fonction `add_edge` telle que `add_edge(G, u, v)` ajoute l'arête entre les sommets `u` et `v` dans un graphe `G` non-orienté représenté par matrice d'adjacence."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "def add_edge(G, u, v):\n",
+    "    G[u][v] = 1\n",
+    "    G[v][u] = 1"
    ]
   },
   {
@@ -49,6 +102,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0, 0, 0, 0, 1],\n",
+       " [0, 0, 1, 1, 1, 0, 0],\n",
+       " [0, 1, 0, 0, 1, 1, 0],\n",
+       " [0, 1, 0, 0, 1, 0, 0],\n",
+       " [0, 1, 1, 1, 0, 1, 0],\n",
+       " [0, 0, 1, 0, 1, 0, 0],\n",
+       " [1, 0, 0, 0, 0, 0, 0]]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G = make_matrix(7, 7)\n",
+    "for u, v in [(3, 4), (3, 1), (1, 2), (4, 1), (4, 2), (2, 5), (4, 5), (0, 6)]:\n",
+    "    add_edge(G, u, v)\n",
+    "G"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "tags": [
@@ -61,10 +147,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 5]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def voisins(G, v):\n",
+    "    L = []\n",
+    "    for j in range(len(G[v])): # parcours de la ligne v\n",
+    "        if G[v][j] == 1:\n",
+    "              L.append(j)\n",
+    "    return L\n",
+    "\n",
+    "voisins(G, 2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "**Exercice** : En déduire une fonction `deg` telle que `deg(G, v)` renvoie le degré du sommet `v`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def deg(G, v):\n",
+    "    return len(voisins(G, v))\n",
+    "\n",
+    "deg(G, 2)"
    ]
   },
   {
@@ -76,6 +212,38 @@
    },
    "source": [
     "**Exercice** : Écrire une fonction `n_aretes` pour calculer le nombre d'arêtes d'un graphe donné par matrice d'adjacence. Tester avec le graphe `G` précédent. On pourra soit réutiliser `deg`, soit deux boucles `for` pour parcourir les éléments de la matrice."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def n_aretes(G):\n",
+    "    n = 0\n",
+    "    for i in range(len(G)): # lignes\n",
+    "        for j in range(len(G[0])): # colonnes\n",
+    "            if G[i][j] == 1:\n",
+    "                n += 1\n",
+    "    return n//2 # chaque arête apparaît deux fois dans un graphe non-orienté\n",
+    "\n",
+    "n_aretes(G)"
    ]
   },
   {
@@ -101,6 +269,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[6, 12], [15, 30]]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def produit(A, B):\n",
+    "    n, p, q = len(A), len(B), len(B[0])\n",
+    "    C = make_matrix(n, q)\n",
+    "    for i in range(n):\n",
+    "        for k in range(q):\n",
+    "            for j in range(p):\n",
+    "                C[i][k] += A[i][j]*B[j][k] # calcul de la somme\n",
+    "    return C\n",
+    "\n",
+    "A = [[1, 2, 3], [4, 5, 6]]\n",
+    "B = [[1, 2], [1, 2], [1, 2]]\n",
+    "produit(A, B)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "tags": [
@@ -112,11 +315,58 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 4], [0, 1]]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def puissance(A, k):\n",
+    "    M = A\n",
+    "    for i in range(k - 1):\n",
+    "        M = produit(M, A)\n",
+    "    return M\n",
+    "\n",
+    "A = [[1, 1], [0, 1]]\n",
+    "puissance(A, 4)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
    "source": [
     "**Exercice** : Quelle est la complexité de `puissance(A, k)`, pour une matrice `A` de taille $n\\times n$ ?  \n",
     "M'appeler pour que je puisse vérifier."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "cor"
+    ]
+   },
+   "source": [
+    "Si `A` est de taille $p\\times q$ et `B` de taille $q\\times n$, `produit(A, B)` est en O($pqn$). En effet, `produit(A, B)` doit remplir les $p\\times n$ cases de `C`, chaque case demandant le calcul d'une somme de $q$ éléments. Ici, les matrices sont carrés donc $n = p = q$.  \n",
+    "Comme `puissance(A, k)` appelle $k$ fois `produit` sur deux matrices $n\\times n$, d'où une complexité $\\boxed{\\text{O}(kn^3)}$."
    ]
   },
   {
@@ -141,8 +391,33 @@
     ]
    },
    "source": [
-    "**Exercice** : En utilisant la question précédente et la fonction `puissance`, trouver le nombre de chemins du sommet $0$ au sommet $2$ dans le graphe suivant :\n",
+    "**Exercice** : En utilisant la question précédente et la fonction `puissance`, trouver le nombre de chemins de longueur $100$ du sommet $0$ au sommet $2$ dans le graphe suivant :\n",
     "<center><img src=https://github.com/fortierq/itc1/raw/master/files/5_graph/tp/tp2/gdir.png width=230></center>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 100, 4950], [0, 1, 100], [0, 0, 1]]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G = [[1, 1, 0], [0, 1, 1], [0, 0, 1]] # matrice d'adjacence\n",
+    "puissance(G, 100) # le nombre de chemins est 4950"
    ]
   },
   {
@@ -154,6 +429,17 @@
    },
    "source": [
     "**Exercice** : Retrouver mathématiquement le résultat précédent, en utilisant seulement du dénombrement (pas de matrice d'adjacence)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "cor"
+    ]
+   },
+   "source": [
+    "Pour choisir un chemin de longueur $100$ de $0$ à $2$, il faut choisir les deux étapes parmi $100$ qui vont changer de sommets. Le nombre cherché est donc :$$\\boxed{\\binom{100}{2} = 4950}$$"
    ]
   },
   {
