--- a/files/5_graph/tp/tp1/tp_graphe_facebook.ipynb
+++ b/files/5_graph/tp/tp1/tp_graphe_facebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://notebook.basthon.fr/?from=https://raw.githubusercontent.com/fortierq/itc1/master/files/5_graph/tp/tp1/tp_graphe_facebook.ipynb'>TP Graphe 1 : Graphe de Facebook <img src=https://framagit.org/uploads/-/system/project/avatar/55763/basthon_shadow.png width=100></a></center>\n",
+    "# TP Graphe 1 : Graphe de Facebook\n",
     "\n",
     "Dans ce TP, nous étudions des [graphes collectés par une équipe de recherche à Stanford](http://snap.stanford.edu/data/index.html) dans différents domaines : réseaux sociaux, réseaux routiers, graphe des avis de consommateurs...\n",
     "\n",
@@ -157,6 +157,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def deg(G, node):\n",
+    "    return len(list(G.neighbors(node)))\n",
+    "\n",
+    "deg(G, 1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "tags": [
@@ -165,6 +192,31 @@
    },
    "source": [
     "**Exercice** : En utilisant la formule $\\sum_{v \\in V} \\deg(v) = 2 |E|$, calculer le nombre d'arêtes $|E|$ de `G`. Vérifier avec `G.number_of_edges()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "88234 88234\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = 0\n",
+    "for v in range(G.number_of_nodes()):\n",
+    "    p += deg(G, v)\n",
+    "\n",
+    "print(f\"{p//2} {G.number_of_edges()}\") # vérification"
    ]
   },
   {
@@ -179,6 +231,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1045"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v_max = 0\n",
+    "for v in range(G.number_of_nodes()):\n",
+    "    if deg(G, v) > deg(G, v_max):\n",
+    "        v_max = v\n",
+    "\n",
+    "deg(G, v_max) # le nombre max d'amis est 1045"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "tags": [
@@ -187,6 +268,33 @@
    },
    "source": [
     "**Exercice** : Quel est le nombre moyen d'amis (la moyenne des degrés) ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "43.69101262688784"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = 0\n",
+    "for v in range(G.number_of_nodes()):\n",
+    "    s += deg(G, v)\n",
+    "s/G.number_of_nodes()"
    ]
   },
   {
@@ -281,6 +389,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.691592636562027"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = 0\n",
+    "n = G.number_of_nodes()\n",
+    "for u in range(n):\n",
+    "    for v in range(n):\n",
+    "        s += shortest_path_lengths[u][v]\n",
+    "s/n**2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "tags": [
@@ -289,6 +426,37 @@
    },
    "source": [
     "**Exercice** : Calculer la distance maximum (ce que l'on appelle aussi le **diamètre**) séparant deux utilisateurs de Facebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "maxi = 0\n",
+    "n = G.number_of_nodes()\n",
+    "for u in range(n):\n",
+    "    for v in range(n):\n",
+    "        l = shortest_path_lengths[u][v]\n",
+    "        if l > maxi:\n",
+    "            maxi = l\n",
+    "maxi"
    ]
   },
   {
@@ -302,18 +470,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/qfortier/.local/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3437: DtypeWarning: Columns (1,2,3,4,5,6,7,8,9,10,11) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv('http://snap.stanford.edu/data/roadNet-CA.txt.gz', compression='gzip', sep=' ', names=['start_node', 'end_node'])\n",
     "G = nx.from_pandas_edgelist(df_fb, 'start_node', 'end_node')"
